--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build-dev": "webpack --env development",
+    "build-prod": "webpack -p --env production",
     "serve": "live-server public/",
     "dev-s": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
