--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-s": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "yarn run buil-prod"
+    "heroku-postbuild": "yarn run build-prod"
   },
   "author": "Aleksander Harhun",
   "license": "ISC",
