--- a/package.json
+++ b/package.json
@@ -23,13 +23,8 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.7",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.1",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "^22.2.2",
-    "live-server": "1.2.0",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
@@ -41,13 +36,20 @@
     "react-modal": "^3.1.6",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "uuid": "^3.2.1",
     "validator": "^9.1.2",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0" 
+  },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.1",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^22.2.2",
+    "live-server": "1.2.0",
+    "react-test-renderer": "^16.2.0",
     "webpack-dev-server": "^2.9.5"
   }
 }
