--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
+    "numeral": "^2.0.6",
     "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
@@ -41,12 +42,12 @@
     "style-loader": "^0.19.0",
     "uuid": "^3.2.1",
     "validator": "^9.1.2",
-    "webpack": "3.1.0" 
+    "webpack": "3.1.0"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
-    "enzyme-to-json": "^3.3.1",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "jest": "^22.2.2",
     "live-server": "1.2.0",
     "react-test-renderer": "^16.2.0",
