--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-prod": "webpack -p --env production",
     "serve": "live-server public/",
     "dev-s": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env KEY_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build-prod"
   },
@@ -48,6 +48,8 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "cross-env": "^5.1.3",
+    "dotenv": "^5.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
